--- a/css/style.css
+++ b/css/style.css
@@ -11,21 +11,42 @@ body {
     background: url(/assets/site/mapblue.jpg) repeat-x 0 0;
 }
 
-.container1>div {
-    float: left;
-    padding: 20px 0px 0px 0px;
-    max-width: 15%;
-    text-align: center;
+.left>div {
     box-sizing: border-box;
-    font-size: 7px;
+    float: left;
+    font-family: "MyFont";
+    font-size: 9px;
     margin: 9px 9px;
+    max-width: 15%;
+    padding: 10px 0px 0px 0px;
+    text-align: center;
 }
 
-.container1 {
+.left {
+    float: left;
     width: 80%;
 }
 
-img {
-    height: 70px;
+.right {
+    float: left;
+    background-color: rgb(29, 29, 29);
+    width: 20%;
+    height: auto;
+}
 
+.right>img {
+    width: 100%;
+    height: auto;
+}
+
+img {
+    height: 60px;
+
+}
+
+.portrait {
+    float: left;
+    height: 90px;
+    padding: 10px 0px 0px 0px;
+    width: 100px;
 }
