--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     background: url(/assets/site/mapblue.jpg) repeat-x 0 0;
 }
 
+.left {
+    float: left;
+    width: 75%;
+}
+
 .left>div {
     box-sizing: border-box;
     float: left;
@@ -22,21 +27,95 @@ body {
     text-align: center;
 }
 
-.left {
+.portrait {
     float: left;
-    width: 80%;
+    height: 90px;
+    padding: 10px 0px 0px 0px;
+    width: 100px;
+
+}
+
+/* .portrait:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+} */
+
+.portrait:hover {
+    animation: shake 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -1px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-1px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-1, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(1px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -1px) rotate(-1deg);
+    }
 }
 
 .right {
-    float: left;
-    background-color: rgb(29, 29, 29);
-    width: 20%;
-    height: auto;
+    background-color: rgb(60, 60, 60);
+    bottom: 0;
+    float: right;
+    margin-left: 75%;
+    position: fixed;
+    top: 0;
+    width: 25%;
 }
 
-.right>img {
-    width: 100%;
+.main {
     height: auto;
+    margin: 0 5% 0 5%;
+    width: 90%;
+}
+
+.main>img {
+    height: auto;
+    margin: 5% 0 5% 0;
+    width: 100%;
+}
+
+
+.main div {
+    color: rgb(211, 208, 201);
 }
 
 img {
@@ -44,9 +123,89 @@ img {
 
 }
 
-.portrait {
+.logo {
+    float: right;
+    height: auto;
+    padding: 0px 10px 0px 0px;
+    width: 20px;
+}
+
+.nameParagraph {
+    color: rgb(211, 208, 201);
+    font-size: 20px;
+}
+
+#titleParagraph {
+    color: rgb(211, 208, 201);
+    font-family: 'MyFont';
+    font-size: 20px;
+    margin: 10% 10% 10% 10%;
+    position: relative;
+    text-align: center;
+}
+
+.vsc-initialized {
+    margin: 0 0 0 0;
+}
+
+.container-4 {
+
+    position: absolute;
+    bottom: 2%;
+    left: 5%;
+    overflow: hidden;
+    vertical-align: middle;
+    width: 300px;
+    white-space: nowrap;
+}
+
+.container-4 input#search {
+    width: 300px;
+    height: 50px;
+    background: #2b303b;
+    border: none;
+    font-size: 10pt;
     float: left;
-    height: 90px;
-    padding: 10px 0px 0px 0px;
-    width: 100px;
+    color: #fff;
+    padding-left: 15px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+
+
+.container-4 button.icon {
+    -webkit-border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-radius-topright: 5px;
+    -moz-border-radius-bottomright: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+
+    border: none;
+    background: #232833;
+    height: 50px;
+    width: 50px;
+    color: #4f5b66;
+    opacity: 0;
+    font-size: 10pt;
+
+    -webkit-transition: all .55s ease;
+    -moz-transition: all .55s ease;
+    -ms-transition: all .55s ease;
+    -o-transition: all .55s ease;
+    transition: all .55s ease;
+}
+
+.container-4:hover button.icon,
+.container-4:active button.icon,
+.container-4:focus button.icon {
+    outline: none;
+    opacity: 1;
+    margin-left: -50px;
+}
+
+.container-4:hover button.icon:hover {
+    background: white;
 }
