--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
     text-align: center;
 }
 
+.selected {
+    animation: shake 1s;
+    animation-iteration-count: infinite;
+}
+
 .portrait {
     float: left;
     height: 90px;
@@ -35,14 +40,9 @@ body {
 
 }
 
-/* .portrait:hover {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-} */
 
 .portrait:hover {
-    animation: shake 1s;
-    animation-iteration-count: infinite;
+    transform: scale(1.5, 1.5);
 }
 
 @keyframes shake {
